version/0.33/_sources/api/solver/_autosummary/settings/initialization_1.rst.txt
:orphan:

.. _initialization_1:

initialization
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.initialization_1
    :show-inheritance:

.. rubric:: Attributes

======================================================================   ================================================================================================

Attribute                                                                                                                                                         Summary

======================================================================   ================================================================================================
:ref:`initialization_type <initialization_type>`                                                                                                     Initialization type.

:ref:`reference_frame <reference_frame_7>`                                                                                          Reference frame absolute or relative.

:ref:`defaults <defaults>`                                                                                                                               Defaults object.

:ref:`localized_turb_init <localized_turb_init>`                             Localized initialization of turbulent flow variables for VOF/Mixture multiphase flow models.

:ref:`hybrid_init_options <hybrid_init_options>`                                                                           The settings for hybrid initialization method.

:ref:`patch <patch>`                                                                                                                                        Patch object.

:ref:`open_channel_auto_init <open_channel_auto_init>`                                                                             Open channel automatic initialization.

:ref:`fmg <fmg>`                                                                                                        The set full-multigrid for initialization object.

:ref:`enable_profile_memory_flushing <enable_profile_memory_flushing>`                                      Flush profile memory using zero values during initialization.

======================================================================   ================================================================================================

.. rubric:: Methods

==============================================================   ======================================================================================================

Method                                                                                                                                                          Summary

==============================================================   ======================================================================================================
:ref:`initialize <initialize_1>`                                                                                 Start initialization with current initialization type.

:ref:`compute_defaults <compute_defaults>`                                                                                       Compute default values from selection.

:ref:`standard_initialize <standard_initialize>`                                                             Initialize the flow field with the current default values.

:ref:`hybrid_initialize <hybrid_initialize>`                                                                         Initialize using the hybrid initialization method.

:ref:`list_defaults <list_defaults>`                                                                                                               List default values.

:ref:`init_turb_vel_fluctuations <init_turb_vel_fluctuations>`                                                              Initialize turbulent velocity fluctuations.

:ref:`init_flow_statistics <init_flow_statistics>`                                                                                               Initialize statistics.

:ref:`show_iterations_sampled <show_iterations_sampled>`                  Display the amount of simulated iterations covered by the data sampled for steady statistics.

:ref:`show_time_sampled <show_time_sampled>`                                  Display the amount of simulated time covered by the data sampled for unsteady statistics.

:ref:`dpm_reset <dpm_reset>`                                                                                                 Reset discrete phase source terms to zero.

:ref:`lwf_reset <lwf_reset>`                                                                     Delete wall film particles and initialize wall film variables to zero.

:ref:`init_lwf <init_lwf>`                                           Initialize Lagrangian wall film on all wall zones for which corresponding settings have been made.

:ref:`init_acoustics_options <init_acoustics_options>`                                                               Specify number of timesteps for ramping of sources

:ref:`levelset_auto_init <levelset_auto_init>`                                                                              Levelset function automatic initialization.

==============================================================   ======================================================================================================

.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`solution <solution>`       'solution' child.

==========================   =====================

